--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -121,7 +121,7 @@
     color: $brand-red;
   }
 
-  .menu a:active, .current-menu-item a {
+  .menu a:active, .current-menu-item > a {
     color: $brand-red !important;
   }
 
