--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -143,7 +143,8 @@ ul.children {
 }
 
 /// highlight show all on archive page
-body.post-type-archive-artists {
+body.post-type-archive-artists,
+body.blog {
 	li.cat-item-all {
 		a {
 			background-color: $red;
