Fixing nav active states. Fixing clear after 2/4.

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -204,15 +204,15 @@ body.blog {
 }
 
 @media screen and (min-width: 40em) {
-	.medium-6:nth-child(2n+1):not(:first-child) {
+	.post-type-archive-touring-partners .medium-6:nth-child(2n+1):not(:first-child) {
 	    clear: both;
 	}
 }
 @media screen and (min-width: 64em) {
-	.medium-6:nth-child(2n+1):not(:first-child) {
+	.post-type-archive-touring-partners .medium-6:nth-child(2n+1):not(:first-child) {
 	    clear: none;
 	}	
-	.large-3:nth-child(4n+1):not(:first-child) {
+	.post-type-archive-touring-partners .large-3:nth-child(4n+1):not(:first-child) {
 	    clear: both;
 	}
 }
