--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -10445,13 +10445,13 @@ body.blog .archive__load-more a:hover {
     float: right; } }
 
 @media screen and (min-width: 40em) {
-  .medium-6:nth-child(2n+1):not(:first-child) {
+  .post-type-archive-touring-partners .medium-6:nth-child(2n+1):not(:first-child) {
     clear: both; } }
 
 @media screen and (min-width: 64em) {
-  .medium-6:nth-child(2n+1):not(:first-child) {
+  .post-type-archive-touring-partners .medium-6:nth-child(2n+1):not(:first-child) {
     clear: none; }
-  .large-3:nth-child(4n+1):not(:first-child) {
+  .post-type-archive-touring-partners .large-3:nth-child(4n+1):not(:first-child) {
     clear: both; } }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
