Making share box semi-transparent.

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-post.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-post.scss
@@ -37,6 +37,7 @@ div#share-buttons {
       right: calc(4em - 10px);
       top: calc(21.4em - 10px);
       background: #fefefe;
+      background: rgba(254, 254, 254, 0.5);
       padding: 10px;
       border-radius: 10px;
       ul {
