Adding events map. Reworking homepage structure slightly to accommodate for this (row).

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -315,6 +315,7 @@ div.people-link-item:hover {
 	// }
 	body.page-template-home {
 		div#video-audio {
+			clear: both;
 			margin-top: $sitepadding-large;
 		}
 	}
