Adding events map. Reworking homepage structure slightly to accommodate for this (row). --> RESPONSIVE FIX.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -298,6 +298,11 @@ div.people-link-item:hover {
 	}
 }
 
+body.page-template-home {
+	div#video-audio {
+		clear: both;
+	}
+}
 
 @include breakpoint(medium) {
 	.single-clients {
@@ -315,7 +320,6 @@ div.people-link-item:hover {
 	// }
 	body.page-template-home {
 		div#video-audio {
-			clear: both;
 			margin-top: $sitepadding-large;
 		}
 	}
