--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -16048,6 +16048,9 @@ div.people-link-item {
 div.people-link-item:hover .overlay {
   display: block !important; }
 
+body.page-template-home div#video-audio {
+  clear: both; }
+
 @media screen and (min-width: 40em) {
   .single-clients .artist-header-thumb {
     height: 300px;
@@ -16055,7 +16058,6 @@ div.people-link-item:hover .overlay {
     margin-top: 0;
     margin: 0 auto; }
   body.page-template-home div#video-audio {
-    clear: both;
     margin-top: 50px; } }
 
 .hero-sub-header {
