Tiding up archive pages on mobile...

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -11,6 +11,7 @@ body.post-type-archive-events {
     background: $header-beige;
     min-height: 182px;
     padding: 10px 0;
+    margin-bottom: 1.5em;
 }
 
 .filter-area {
