--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -10159,7 +10159,8 @@ body.post-type-archive-events div#archive {
   border-bottom: 1px solid #cccccc;
   background: #FBFAF6;
   min-height: 182px;
-  padding: 10px 0; }
+  padding: 10px 0;
+  margin-bottom: 1.5em; }
 
 .filter-area {
   text-align: center;
