Further tidy up.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
@@ -9,6 +9,7 @@
 	text-align: center;
 	border-bottom: 1px solid #cccccc;
 	background: $header-beige;
+	margin-bottom: $sitepadding;
 	.center-hero-text {
     	display: table-cell;
     	vertical-align: middle;
