--- a/wp-content/themes/askonasholt2016/assets/scss/components/_page-nav-tiles.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_page-nav-tiles.scss
@@ -3,7 +3,7 @@
 	// margin: $sitepadding-large 0;
 	border-top: 1px solid #cccccc;
 	text-align: center;
-	margin: 2em 0;
+	margin: 2em 0 -34px;
 	ul.submenu.page-nav-buttons {
 		list-style-type: none;
 		text-align: center;
