--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -63,7 +63,8 @@ $sitepadding-large: 50px;
 $sitepadding-small: 12.5px;
 
 //fonts  **********
-$serif-font: 'GeometricSlab703BT-Light';
+// $serif-font: 'GeometricSlab703BT-Light';
+$serif-font: 'GeometricSlab703TL-Light';
 
 
 // 1. Global
