--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -399,8 +399,10 @@ span.bold {
 
 //Serif font
 @import url("//hello.myfonts.net/count/328e32");
+@import url("//hello.myfonts.net/count/362236");
   
 @font-face {font-family: 'GeometricSlab703BT-Light';src: url('webfonts/328E32_0_0.eot');src: url('webfonts/328E32_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/328E32_0_0.woff2') format('woff2'),url('webfonts/328E32_0_0.woff') format('woff'),url('webfonts/328E32_0_0.ttf') format('truetype');}
+@font-face {font-family: 'GeometricSlab703TL-Light';src: url('webfonts/362236_1_0.eot');src: url('webfonts/362236_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/362236_1_0.woff2') format('woff2'),url('webfonts/362236_1_0.woff') format('woff'),url('webfonts/362236_1_0.ttf') format('truetype');}
 
 @media #{$medium-up} {
   .valign-middle {
