Search autocomplete dropdown and cookie notice styling fixes.

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -147,15 +147,15 @@ p.byline.author { display: none; }
 }
 
 #cookie-notice .button.bootstrap {
-    background-color: #ffffff;
-    background-image: none;
-    color: $brand-red;
+    background-color: #ffffff !important;
+    background-image: none !important;
+    color: $brand-red !important;
 }
 
 #cookie-notice .button.bootstrap:hover {
-    background-color: #ffffff;
-    background-image: none;
-    color: $brand-red;
+    background-color: #ffffff !important;
+    background-image: none !important;
+    color: $brand-red !important;
 }
 
 //remove padding as 'columns' will add this
