--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_searchbar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_searchbar.scss
@@ -30,6 +30,7 @@ body.search-bar-is-visible {
 
 ul.ui-autocomplete {
   margin: 0;
+  padding: 0;
   opacity: 0.9;
   width: calc(50vw + 77px) !important;
   left: 50% !important;
