Adding more info to map marker popups.
Closing previous map marker popup before opening new.

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_route-map.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_route-map.scss
@@ -3,6 +3,10 @@
 	height: 400px;
 	border: #ccc solid 1px;
 	margin: 20px 0;
+
+	&#events-map {
+		margin-top: 0;
+	}
 }
 
 /* fixes potential theme css conflict */
