--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -10916,6 +10916,9 @@ header h1 {
   min-height: 60vh;
   margin: 50px auto; }
 
+.marker-container .side-bar-artist + .side-bar-artist {
+  margin-top: 10px; }
+
 @media screen and (min-width: 40em) {
   .schedule h4.section-header {
     padding-top: 14px; } }
