Styling map popup info.

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_route-map.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_route-map.scss
@@ -21,7 +21,7 @@
 }
 
 .marker-container {
-	.side-bar-artist + .side-bar-artist {
-		margin-top: 10px;
+	.side-bar-artist {
+		margin: 5px 0;
 	}
 }
