--- a/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
@@ -3,7 +3,7 @@
 	max-width: 100%;
     left: 0;
     //position: absolute;
-    margin: $sitepadding 0;
+    margin: 0 0 $sitepadding-small;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
