--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -164,8 +164,9 @@ body.blog {
   	width: 100%;
   	li {
   		a {
+  			margin-bottom: 2px;
   			padding: 0.85em 0.5em;
-  			font-size: 10px;
+  			font-size: 11px;
   		}
   	}
   }
