--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -359,14 +359,14 @@ span.more-info {
 
 .event-detail {
   display: inline-block;
+  min-width: 107px;
   padding-top: 5px;
+  padding-right: $sitepadding;
   padding-bottom: 5px;
+  text-align: center;
 }
 
 @include breakpoint(medium) {
-  span.side-bar-artist-name, .event-detail {
-    padding-right: $sitepadding;
-  }
   span.more-info {
     right: 1.25em;
   }
