--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_press-accordion.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_press-accordion.scss
@@ -10,9 +10,9 @@
 	.press-details span:last-child {
 		// font-weight: bold;
 	}
-	.press-details span:not(:last-child) {
-		border-right: 1px solid #cccccc;
-	}
+	// .press-details span:not(:last-child) {
+	// 	border-right: 1px solid #cccccc;
+	// }
 	li.accordion-item {
 	    border-top: 1px solid #cccccc;
 	}
