Touring partner slider styling.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
@@ -71,6 +71,15 @@ body.single-artists {
 	}
 }
 
+//Arrows on Touring Partner slider
+body.single-touring-partners {
+	i.fa.fa-angle-left.slick-arrow {
+		left: 0;
+	}
+	i.fa.fa-angle-right.slick-arrow {
+		right: 0;
+	}
+}
 
 .hero-text-area {
 	a {
