--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
@@ -9,6 +9,10 @@
     @include grid-row();
     padding: rem-calc(30) 0;
 
+    article {
+      padding-bottom: 0;
+    }
+
     ul {
       list-style-type: none;
       margin: 0;
